--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 
 .container {
   border: 2px solid var(--neon-blue);
-  border-radius: 10px;
+  border-radius: 5px;
   padding: 5px;
   margin: 10px;
 }
@@ -35,21 +35,37 @@ body {
   align-items: center;
   justify-content: space-between;
   color: var(--neon-blue);
+  border-top: 2px solid var(--neon-blue);
+  border-bottom: 2px solid var(--neon-blue);
+  margin: 10px 20px;
+  padding: 5px 10px;
+}
+
+.introduce {
+  display: flex;
+  align-items: center;
 }
 
 h1 {
   display: inline-block;
   font-family: "Exo", sans-serif;
   font-size: 1em;
-  border: 4px solid var(--neon-blue);
-  border-radius: 10px;
+  border: 2px solid var(--neon-blue);
+  border-radius: 5px;
   text-transform: uppercase;
   padding: 5px;
+  margin-right: 10px;
 }
 
 h2 {
   font-size: 0.625em;
   color: var(--neon-orange);
+}
+
+.nav {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 ul {
