--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,9 @@
 
 body {
   background-color: var(--black);
-  color: var(--neon-blue);
+  /* color: var(--neon-blue); */
   /* color: #15ccdc; */
+  color: white;
   font-family: "Source Code Pro", monospace;
   text-shadow: 0 0 5px var(--neon-blue);
   font-size: 1.5em;
@@ -27,6 +28,10 @@ body {
   padding: 5px;
   margin: 10px;
 }
+
+/* .box {
+
+} */
 
 /* Header */
 .header {
@@ -62,6 +67,10 @@ h2 {
   color: var(--neon-orange);
 }
 
+h3 {
+  text-transform: uppercase;
+}
+
 .nav {
   display: flex;
   justify-content: space-evenly;
@@ -77,7 +86,7 @@ ul {
 }
 
 li {
-  padding: 10px;
+  padding: 5px;
 }
 
 li a {
@@ -93,6 +102,33 @@ li a:hover {
   color: var(--black);
   box-shadow: 0 0 5px var(--neon-blue);
 }
+
+/* =====  MAIN  ===== */
+.sub-title {
+  border-bottom: 1px solid var(--neon-blue);
+  margin: 0 10px;
+}
+
+.bio {
+  display: flex;
+  align-items: center;
+}
+
+.bio p {
+  margin-left: 10px;
+}
+
+.bio-image {
+  width: 200px;
+  height: 200px;
+}
+
+.img-container {
+  border: 2px groove var(--neon-blue);
+  border-radius: 5px;
+  margin: 10px;
+}
+
 .quantico {
   font-family: "Quantico", sans-serif;
 }
