--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .container {
-  border: 2px solid var(--neon-blue);
+  border: 4px solid var(--neon-blue);
   border-radius: 5px;
   padding: 5px;
   margin: 10px;
@@ -69,6 +69,10 @@ h2 {
 
 h3 {
   text-transform: uppercase;
+}
+
+h4 {
+  font-weight: 200;
 }
 
 .nav {
@@ -124,9 +128,14 @@ li a:hover {
 }
 
 .img-container {
-  border: 2px groove var(--neon-blue);
+  border: 5px groove var(--neon-blue);
   border-radius: 5px;
   margin: 10px;
+}
+
+.projects {
+  display: flex;
+  justify-content: space-between;
 }
 
 .quantico {
@@ -138,3 +147,20 @@ li a:hover {
 .maven-pro {
   font-family: "Maven Pro", sans-serif;
 }
+
+/* .folder {
+  border: 1px solid var(--neon-blue);
+  width: 90px;
+  height: 60px;
+  border-radius: 5px;
+}
+ */
+
+ .folder a {
+   color: white;
+   text-decoration: none;
+ }
+
+ .folder img {
+   max-width: 200px;
+ }
